--- a/index.html
+++ b/index.html
@@ -6,49 +6,49 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf"
+    <div class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <a class="header__link"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <div class="main">
+      <p class="new-task">
+        <label class="new-task__title" for="new-task">Add Item</label>
+        <div class="new-task__wrap">
+          <input id="new-task" class="new-task__value task-content" type="text">
+          <button class="btn new-task__add">Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <ul id="incomplete-tasks" class="tasks">
+        <li class="task">
+          <input class="task__toogle" type="checkbox">
+          <label class="task__title task-content">Pay Bills</label>
+          <input class="task__value task-content" type="text">
+          <button class="btn task__btn-edit">Edit</button>
+          <button class="btn task__btn-del">
+            <img class="task__del-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="task task_editable">
+          <input class="task__toogle" type="checkbox">
+          <label class="task__title task-content">Go Shopping</label>
+          <input class="task__value task-content" type="text" value="Go Shopping">
+          <button class="btn task__btn-edit">Save</button>
+          <button class="btn task__btn-del">
+            <img class="task__del-img" src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <ul id="completed-tasks" class="tasks">
+        <li class="task">
+          <input class="task__toogle" type="checkbox" checked>
+          <label class="task__title task-content">See the Doctor</label>
+          <input class="task__value task-content" type="text">
+          <button class="btn task__btn-edit">Edit</button>
+          <button class="btn task__btn-del">
+            <img class="task__del-img" src="./remove.svg">
           </button>
         </li>
       </ul>
