refactor: add alt according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="page">
     <header>
       <div class="header">
-        <img class="header__img" src="./eisenhower-matrix.jpg">
+        <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
         <a class="header__link"
             href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
@@ -33,7 +33,7 @@
               <input class="task__value task-content task-input" type="text">
               <button class="btn task__btn-edit">Edit</button>
               <button class="btn task__btn-del">
-                <img class="task__del-img" src="./remove.svg">
+                <img class="task__del-img" src="./remove.svg" alt="Remove task">
               </button>
             </li>
             <li class="task task_editable">
@@ -42,7 +42,7 @@
               <input class="task__value task-content task-input" type="text" value="Go Shopping">
               <button class="btn task__btn-edit">Save</button>
               <button class="btn task__btn-del">
-                <img class="task__del-img" src="./remove.svg">
+                <img class="task__del-img" src="./remove.svg" alt="Remove task">
               </button>
             </li>
           </ul>
@@ -56,7 +56,7 @@
               <input class="task__value task-content task-input" type="text">
               <button class="btn task__btn-edit">Edit</button>
               <button class="btn task__btn-del">
-                <img class="task__del-img" src="./remove.svg">
+                <img class="task__del-img" src="./remove.svg" alt="Remove task">
               </button>
             </li>
           </ul>
